- Added art for publishing on Google Play Store - Added clear language in AccessibilityService permission request - Tweaked manual build steps in README.md

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="permission_dialog_overlay_message">Draw overlays permission is required to visualize a mouse pointer, press OK to open settings</string>
     <string name="permission_dialog_dismissed_message">In order to properly use Deskflow for Android, you must enable these permissions.</string>
     <string name="permission_dialog_buttons_open_settings">Open Settings</string>
-    <string name="permission_dialog_accessibility_service_message">Accessibility service is not enabled, open settings?</string>
+    <string name="permission_dialog_accessibility_service_message">Accessibility service permissions are required in order to create a virtual mouse pointer, respond to keyboard shortcuts (like opening the app switcher) and integrating editor controls. If it\'s not enabled, Deskflow can not function.</string>
     <string name="settings_screen_instructions">Enter server connectivity information for the Deskflow/Deskflow server, which will control the input of this device.</string>
     <string name="settings_screen_title"><![CDATA[Connect Keyboard & Mouse]]></string>
     <string name="button_cancel">Cancel</string>
