optionally disconnect when device screen turns off

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,8 @@
     <string name="permission_dialog_nearby_devices_message">Deskflow needs to be able to search for nearby devices on your network.</string>
     <string name="permission_dialog_ime_enabled_message">In order to use Deskflow, you must enable the Deskflow keyboard in settings.</string>
     <string name="keyboard_picker_button_desc">Switch keyboard</string>
+    <string name="settings_screen_disconnect_on_screen_off_label">Disconnect when screen off</string>
+    <string name="settings_screen_disconnect_on_screen_off_description">Automatically disconnect from server when screen turns off to save battery</string>
 
 
 </resources>
